# just_another_card_game

./: Cargo.toml
card_game_app/: Cargo.toml
card_game_client/: Cargo.toml
card_game_client/src/: main.rs
card_game_server/: Cargo.toml
card_game_server/src/: main.rs
shared_lib/: Cargo.toml
shared_lib/src/: data_structures.rs  lib.rs  socket_message_passing.rs
shared_lib/src/data_structures/: mod.rs  touping.rs
