[package]
name = "card_game_server"
version = "0.1.0"
authors = ["NilsHasNoGithub <niolopa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
derive_builder = "0.9.0"
think_thank_rust = { git = "https://github.com/NilsHasNoGithub/think_thank_rust"}
serde = { version = "1.0.105", features = ["derive"]}
shared_lib = { path = "../shared_lib"}