[package]
name = "shared_lib"
version = "0.1.0"
authors = ["NilsHasNoGithub <niolopa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"]}
rand = "0.7.*"
serde_yaml = "*"
bincode = "1.2.*"
derive_more = "0.99.*"